--- a/web-ingles/web-boot/css/styles.css
+++ b/web-ingles/web-boot/css/styles.css
@@ -96,6 +96,7 @@
 }
 
 body {
+  background-color: black;
   margin: 0;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
@@ -103,7 +104,6 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
