--- a/web-ingles/css/styles.css
+++ b/web-ingles/css/styles.css
@@ -13038,6 +13038,6 @@ table {
   color: whitesmoke;
 }
 .tarjetas {
-  background-color: black;
-  color: whitesmoke;
+  background-color: #474747;
+  color: #64a19d;
 }
