--- a/web-lenguajes/style/style.css
+++ b/web-lenguajes/style/style.css
@@ -59,15 +59,17 @@ nav ul li:hover ul {
     width: 72%;
     margin-bottom: 70px;
 }
+
 /* ### CENTRO PAGINA PRINCIPAL ###*/
 .content {
-    background-image:url("../img/fondo.png");
+    background-image: url("../img/fondo.png");
     background-size: cover;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     flex-grow: 1;
     padding: 0;
     display: flex;
 }
+
 /* caja central y animacion */
 .bienvenida {
     display: flex;
@@ -80,16 +82,19 @@ nav ul li:hover ul {
     animation-duration: 3s;
     animation-fill-mode: forwards;
 }
+
 @keyframes agrandar-texto {
     0% {
         background-color: #00000000;
         color: #d39f6400;
     }
+
     100% {
         background-color: rgba(0, 0, 0, 0.400);
         color: #d39f64;
     }
 }
+
 /* #################################################### */
 .bienvenida button {
     background-color: #000000;
@@ -98,9 +103,11 @@ nav ul li:hover ul {
     padding: 2%;
     text-align: center;
 }
+
 .bienvenida a {
     text-decoration: none;
 }
+
 /* Barras laterales*/
 .sidebar {
     width: 10%;
@@ -108,20 +115,24 @@ nav ul li:hover ul {
     background-color: #815017;
     height: 1000px;
 }
+
 .caja-publi {
     border: #d39f6486 double 3px;
     margin-top: 35%;
     width: fit-content;
 }
+
 .caja-publi img {
     margin-top: 5%;
     width: 95%;
     height: 300px;
 }
+
 .derecha {
     position: fixed;
     right: 0%;
 }
+
 .izquierda {
     position: fixed;
     left: 0%;
@@ -136,4 +147,46 @@ nav ul li:hover ul {
     position: fixed;
     bottom: 0;
     width: 100%;
+}
+
+
+/* HORARIO */
+table {
+    animation: ampli-table forwards 5s;
+}
+@keyframes ampli-table {
+    0% {
+        width: 0%;
+        margin-right: 0%;
+    }
+    25% {margin-right:25%;}
+    50% {margin-right:50%;}
+    75% {margin-right:25%;}
+    100% {
+        width: 50%;
+        margin-right: auto;
+    }
+    
+}
+table {
+    margin: auto;
+    border-collapse: collapse;
+    font-size: 18px;
+    text-align: left;
+}
+
+th, td {
+    padding: 12px;
+    border: 1px solid #ddd;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+.table-header {
+    background-color: #a06624;
+    color: white;
+    text-align: center;
+    font-size: 24px;
 }
