--- a/web-lenguajes/style/style.css
+++ b/web-lenguajes/style/style.css
@@ -12,7 +12,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: #815017;
+    background-color: #57330b;
     color: #d39f64;
     text-align: center;
     padding: 10px 0;
@@ -20,7 +20,6 @@ body {
 }
 
 .header nav a {
-    color: #d39f64;
     margin: 0 15px;
     text-decoration: none;
     font-size: 18px;
