--- a/web-lenguajes/style/style.css
+++ b/web-lenguajes/style/style.css
@@ -7,6 +7,22 @@ body {
     background-color: #815017;
 }
 
+@font-face {
+    font-family: "Overcooked";
+    src: url("https://db.onlinewebfonts.com/t/4d9ee5a678d899047a987f0408b4b052.eot");
+    src: url("https://db.onlinewebfonts.com/t/4d9ee5a678d899047a987f0408b4b052.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/4d9ee5a678d899047a987f0408b4b052.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/4d9ee5a678d899047a987f0408b4b052.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/4d9ee5a678d899047a987f0408b4b052.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/4d9ee5a678d899047a987f0408b4b052.svg#Overcooked")format("svg");
+}
+.titulo-centrado {
+    font-family: "Overcooked";
+    text-align: center;
+    word-spacing: 4px;
+    letter-spacing: 8px;
+    font-size: 50pt;
+}
 /* menu superior */
 .header {
     position: fixed;
